Update EtherBone info - According to its wiki

--- a/initial_research/bibliography.bib
+++ b/initial_research/bibliography.bib
@@ -68,13 +68,31 @@
   howpublished = {\href{https://ohwr.org/project/white-rabbit/-/wikis/Node}{ohwr.org/project/white-rabbit/-/wikis/Node}}
 }
 
-@misc{gl:etherbone-core,
+@misc{etherbone-core:ohwr,
   author = {{CERN}},
   title = {{EtherBone Core}},
   year = {2024},
   publisher = {GitLab},
   journal = {GitLab Group},
-  howpublished = {\href{https://ohwr.org/project/etherbone-core}{gl.ohwr.org:project/etherbone-core}}
+  howpublished = {\href{https://ohwr.org/project/etherbone-core}{ohwr.org:project/etherbone-core}}
+}
+
+@misc{etherbone-core:wiki,
+  author = {{CERN}},
+  title = {{EtherBone Core Wiki}},
+  year = {2024},
+  publisher = {GitLab},
+  journal = {GitLab Group},
+  howpublished = {\href{https://ohwr.org/project/etherbone-core/-/wikis/home}{ohwr.org/project/etherbone-core/-/wikis/home}}
+}
+
+@misc{etherbone-core:spec,
+  author = {{CERN}},
+  title = {{EtherBone Core Spec}},
+  year = {2024},
+  publisher = {GitLab},
+  journal = {GitLab Group},
+  howpublished = {\href{https://ohwr.org/project/etherbone-core/uploads/31c96b68f85d27fd5199dfc6d6443a08/spec.pdf}{ohwr.org/project/etherbone-core/uploads/31c96b68f85d27fd5199dfc6d6443a08/spec.pdf}}
 }
 
 @misc{WR-core:wiki,
