Specify the status of the questa container

--- a/initial_research/sections/intro.tex
+++ b/initial_research/sections/intro.tex
@@ -477,7 +477,8 @@ In this context, one of the best options is \say{QuestaSim}.
 
 \vspace{5mm}
 
-\noindent \href{https://github.com/umarcor}{Umarcor} is planning to develop a container, hosted on our server, for this purpose.
+\noindent \href{https://github.com/umarcor}{Umarcor} is planning to develop a container, hosted on our server, for this purpose. 
+(DONE - Questa container, with and without VUnit, available on the lab server.)
 
 \vspace{5mm}
 
