Specify the status of the initial mixed simulation test

--- a/initial_research/sections/intro.tex
+++ b/initial_research/sections/intro.tex
@@ -483,4 +483,4 @@ In this context, one of the best options is \say{QuestaSim}.
 \vspace{5mm}
 
 \noindent \textbf{Task:} Learn how to generate a testbench using both HDLs: VHDL and Verilog.
-
+(Initial mixed simulation test DONE - Unfortunately questa is a proprietary software and our server image cannot be distributed, so this example cannot be shown on GitHub, it is only available in our private GitLab repository.)
