Reorder initial_research doc

--- a/initial_research/main.tex
+++ b/initial_research/main.tex
@@ -103,6 +103,9 @@ rightmargin=25pt
 
 % Sections
 \input{sections/intro}
+\input{sections/wrn}
+\input{sections/wrpc}
+\input{sections/asic}
 
 \clearpage % If you want the references in a separate page
 \bibliography{bibliography}
