Update initial_research doc

--- a/initial_research/bibliography.bib
+++ b/initial_research/bibliography.bib
@@ -168,3 +168,21 @@
       url   = "http://cds.cern.ch/record/2213516",
       doi   = "10.18429/JACoW-ICALEPCS2015-THHA2I01",
 }
+
+@misc{gh:vunit,
+  author = {Asplund, Lars and Kraigher, Olof and {Contribuidores}},
+  title = {{VUnit - Testing framework for VHDL/    SystemVerilog}},
+  year = {2024},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\href{https://github.com/VUnit/vunit}{gh:VUnit/vunit}},
+}
+
+@misc{gh:ghdl,
+  author = {Gingold, Tristan and {Contribuidores}},
+  title = {{GHDL - VHDL 2008/93/87 simulator}},
+  year = {2024},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\href{https://github.com/ghdl/ghdl}{gh:ghdl/ghdl}},
+}
